--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -135,18 +135,22 @@
       <% end %>
     <%end%>
     <div class="info-card-first-content">
-      <p class="info-card-dark info-header-show">
-        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g clip-path="url(#clip0_3261_191)">
-            <path d="M20.3477 20.6523H16.3477V16.6523H20.3477V20.6523ZM14.3477 10.6523H10.3477V14.6523H14.3477V10.6523ZM20.3477 10.6523H16.3477V14.6523H20.3477V10.6523ZM8.34766 16.6523H4.34766V20.6523H8.34766V16.6523ZM14.3477 16.6523H10.3477V20.6523H14.3477V16.6523ZM8.34766 10.6523H4.34766V14.6523H8.34766V10.6523ZM24.3477 2.65234V24.6523H0.347656V2.65234H3.34766V3.65234C3.34766 4.75534 4.24466 5.65234 5.34766 5.65234C6.45066 5.65234 7.34766 4.75534 7.34766 3.65234V2.65234H17.3477V3.65234C17.3477 4.75534 18.2447 5.65234 19.3477 5.65234C20.4507 5.65234 21.3477 4.75534 21.3477 3.65234V2.65234H24.3477ZM22.3477 8.65234H2.34766V22.6523H22.3477V8.65234ZM20.3477 1.65234C20.3477 1.10034 19.9007 0.652344 19.3477 0.652344C18.7947 0.652344 18.3477 1.10034 18.3477 1.65234V3.65234C18.3477 4.20434 18.7947 4.65234 19.3477 4.65234C19.9007 4.65234 20.3477 4.20434 20.3477 3.65234V1.65234ZM6.34766 3.65234C6.34766 4.20434 5.90066 4.65234 5.34766 4.65234C4.79466 4.65234 4.34766 4.20434 4.34766 3.65234V1.65234C4.34766 1.10034 4.79466 0.652344 5.34766 0.652344C5.90066 0.652344 6.34766 1.10034 6.34766 1.65234V3.65234Z" fill="white"/>
-          </g>
-        </svg>
-        <%= oeuvre.date_oeuvre %>
-      </p>
+      <%= link_to search_path(:tab => "frise") do %>
+        <p class="info-card-dark info-header-show">
+          <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_3261_191)">
+              <path d="M20.3477 20.6523H16.3477V16.6523H20.3477V20.6523ZM14.3477 10.6523H10.3477V14.6523H14.3477V10.6523ZM20.3477 10.6523H16.3477V14.6523H20.3477V10.6523ZM8.34766 16.6523H4.34766V20.6523H8.34766V16.6523ZM14.3477 16.6523H10.3477V20.6523H14.3477V16.6523ZM8.34766 10.6523H4.34766V14.6523H8.34766V10.6523ZM24.3477 2.65234V24.6523H0.347656V2.65234H3.34766V3.65234C3.34766 4.75534 4.24466 5.65234 5.34766 5.65234C6.45066 5.65234 7.34766 4.75534 7.34766 3.65234V2.65234H17.3477V3.65234C17.3477 4.75534 18.2447 5.65234 19.3477 5.65234C20.4507 5.65234 21.3477 4.75534 21.3477 3.65234V2.65234H24.3477ZM22.3477 8.65234H2.34766V22.6523H22.3477V8.65234ZM20.3477 1.65234C20.3477 1.10034 19.9007 0.652344 19.3477 0.652344C18.7947 0.652344 18.3477 1.10034 18.3477 1.65234V3.65234C18.3477 4.20434 18.7947 4.65234 19.3477 4.65234C19.9007 4.65234 20.3477 4.20434 20.3477 3.65234V1.65234ZM6.34766 3.65234C6.34766 4.20434 5.90066 4.65234 5.34766 4.65234C4.79466 4.65234 4.34766 4.20434 4.34766 3.65234V1.65234C4.34766 1.10034 4.79466 0.652344 5.34766 0.652344C5.90066 0.652344 6.34766 1.10034 6.34766 1.65234V3.65234Z" fill="white"/>
+            </g>
+          </svg>
+          <%= oeuvre.date_oeuvre %>
+        </p>
+      <%end%>
+      <%= link_to search_path(:tab => "references", :domaine => oeuvre.domaine.id) do %>
       <div class="info-card-dark info-header-show">
         <div class="small-circle" style="background-color: <%= oeuvre.domaine.couleur %>;"></div>
         <%= oeuvre.domaine.domaine %>
       </div>
+      <%end%>
     </div>
     <div class="header-top">
       <p class="subtitle-card">
@@ -156,7 +160,7 @@
       </p>
       <p class="title-card"><%= oeuvre.nom_oeuvre %></p>
       <div class="flex-info">
-        <%= link_to search_frise_path do %>
+        <%= link_to search_path(:tab => "frise") do %>
           <div class="info-card">
             <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_3261_191)">
@@ -167,7 +171,7 @@
           </div>
         <%end%>
         <% if @oeuvre.domaine.present? %>
-          <%= link_to search_category_path(domaine: @oeuvre.domaine.id) do %>
+          <%= link_to search_path(:tab => "references", :domaine => oeuvre.domaine.id) do %>
             <div class="info-card">
               <div class="small-circle" style="background-color: <%= oeuvre.domaine.couleur %>;"></div>
               <%= @oeuvre.domaine.domaine %>
